--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,20 @@
-  - uses: actions/checkout@v2
-    with:
-      ref: ${{ github.event.pull_request.head.sha }}
+name: Test Coverage
+on:
+  pull_request:
+    types: [ opened, synchronize ]
+jobs:
+  report-test-coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
-  - name: Report results to DeepSource
-    run: |
-    # Run tests and generate simplecov coverage
-      bundle exec rspec
+      - name: Report results to DeepSource
+        run: |
+        bundle exec rspec
+        curl https://deepsource.io/cli | sh
+        ./bin/deepsource report --analyzer test-coverage --key ruby --value-file coverage/.resultset.json
 
-    # Install deepsource CLI
-      curl https://deepsource.io/cli | sh
-
-    # From the root directory, run the report coverage command
-      ./bin/deepsource report --analyzer test-coverage --key ruby --value-file coverage/.resultset.json
-
-    env:
-      DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
+        env:
+          DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
